RESOLVED FIXED163360
Copy BackForwardList from WebCore to WebKit/win
https://bugs.webkit.org/show_bug.cgi?id=163360
Summary Copy BackForwardList from WebCore to WebKit/win
Anders Carlsson
Reported 2016-10-12 14:55:07 PDT
Copy BackForwardList from WebCore to WebKit/win
Attachments
Patch (4.75 KB, patch)
2016-10-12 14:57 PDT, Anders Carlsson
no flags
Patch (16.14 KB, patch)
2016-10-12 15:07 PDT, Anders Carlsson
no flags
Patch (16.71 KB, patch)
2016-10-12 15:55 PDT, Anders Carlsson
no flags
Patch (16.72 KB, patch)
2016-10-12 16:58 PDT, Anders Carlsson
no flags
Patch (16.73 KB, patch)
2016-10-13 12:28 PDT, Anders Carlsson
achristensen: review+
Anders Carlsson
Comment 1 2016-10-12 14:57:20 PDT
Anders Carlsson
Comment 2 2016-10-12 15:07:53 PDT
WebKit Commit Bot
Comment 3 2016-10-12 15:10:42 PDT
Attachment 291404 [details] did not pass style-queue: ERROR: Source/WebKit/win/BackForwardList.cpp:27: Found other header before WebCore config.h. Should be: config.h, primary header, blank line, and then alphabetically sorted. [build/include_order] [4] ERROR: Source/WebKit/win/BackForwardList.cpp:28: Found header this file implements after other header. Should be: config.h, primary header, blank line, and then alphabetically sorted. [build/include_order] [4] ERROR: Source/WebKit/win/BackForwardList.cpp:92: One line control clauses should not use braces. [whitespace/braces] [4] ERROR: Source/WebKit/win/BackForwardList.cpp:100: One line control clauses should not use braces. [whitespace/braces] [4] ERROR: Source/WebKit/win/BackForwardList.cpp:105: Multi line control clauses should use braces. [whitespace/braces] [4] ERROR: Source/WebKit/win/BackForwardList.cpp:108: Omit int when using unsigned [runtime/unsigned] [1] ERROR: Source/WebKit/win/BackForwardList.cpp:109: Multi line control clauses should use braces. [whitespace/braces] [4] ERROR: Source/WebKit/win/BackForwardList.cpp:114: One line control clauses should not use braces. [whitespace/braces] [4] ERROR: Source/WebKit/win/BackForwardList.cpp:152: Multi line control clauses should use braces. [whitespace/braces] [4] ERROR: Source/WebKit/win/BackForwardList.cpp:181: One line control clauses should not use braces. [whitespace/braces] [4] ERROR: Source/WebKit/win/BackForwardList.cpp:216: Multi line control clauses should use braces. [whitespace/braces] [4] Total errors found: 11 in 7 files If any of these errors are false positives, please file a bug against check-webkit-style.
Anders Carlsson
Comment 4 2016-10-12 15:55:15 PDT
WebKit Commit Bot
Comment 5 2016-10-12 15:56:43 PDT
Attachment 291411 [details] did not pass style-queue: ERROR: Source/WebKit/win/BackForwardList.cpp:27: Found other header before WebCore config.h. Should be: config.h, primary header, blank line, and then alphabetically sorted. [build/include_order] [4] ERROR: Source/WebKit/win/BackForwardList.cpp:28: Found header this file implements after other header. Should be: config.h, primary header, blank line, and then alphabetically sorted. [build/include_order] [4] ERROR: Source/WebKit/win/BackForwardList.cpp:92: One line control clauses should not use braces. [whitespace/braces] [4] ERROR: Source/WebKit/win/BackForwardList.cpp:100: One line control clauses should not use braces. [whitespace/braces] [4] ERROR: Source/WebKit/win/BackForwardList.cpp:105: Multi line control clauses should use braces. [whitespace/braces] [4] ERROR: Source/WebKit/win/BackForwardList.cpp:108: Omit int when using unsigned [runtime/unsigned] [1] ERROR: Source/WebKit/win/BackForwardList.cpp:109: Multi line control clauses should use braces. [whitespace/braces] [4] ERROR: Source/WebKit/win/BackForwardList.cpp:114: One line control clauses should not use braces. [whitespace/braces] [4] ERROR: Source/WebKit/win/BackForwardList.cpp:152: Multi line control clauses should use braces. [whitespace/braces] [4] ERROR: Source/WebKit/win/BackForwardList.cpp:181: One line control clauses should not use braces. [whitespace/braces] [4] ERROR: Source/WebKit/win/BackForwardList.cpp:216: Multi line control clauses should use braces. [whitespace/braces] [4] Total errors found: 11 in 8 files If any of these errors are false positives, please file a bug against check-webkit-style.
Anders Carlsson
Comment 6 2016-10-12 16:58:26 PDT
WebKit Commit Bot
Comment 7 2016-10-12 17:00:54 PDT
Attachment 291425 [details] did not pass style-queue: ERROR: Source/WebKit/win/BackForwardList.cpp:27: Found other header before WebCore config.h. Should be: config.h, primary header, blank line, and then alphabetically sorted. [build/include_order] [4] ERROR: Source/WebKit/win/BackForwardList.cpp:28: Found header this file implements after other header. Should be: config.h, primary header, blank line, and then alphabetically sorted. [build/include_order] [4] ERROR: Source/WebKit/win/BackForwardList.cpp:92: One line control clauses should not use braces. [whitespace/braces] [4] ERROR: Source/WebKit/win/BackForwardList.cpp:100: One line control clauses should not use braces. [whitespace/braces] [4] ERROR: Source/WebKit/win/BackForwardList.cpp:105: Multi line control clauses should use braces. [whitespace/braces] [4] ERROR: Source/WebKit/win/BackForwardList.cpp:108: Omit int when using unsigned [runtime/unsigned] [1] ERROR: Source/WebKit/win/BackForwardList.cpp:109: Multi line control clauses should use braces. [whitespace/braces] [4] ERROR: Source/WebKit/win/BackForwardList.cpp:114: One line control clauses should not use braces. [whitespace/braces] [4] ERROR: Source/WebKit/win/BackForwardList.cpp:152: Multi line control clauses should use braces. [whitespace/braces] [4] ERROR: Source/WebKit/win/BackForwardList.cpp:181: One line control clauses should not use braces. [whitespace/braces] [4] ERROR: Source/WebKit/win/BackForwardList.cpp:216: Multi line control clauses should use braces. [whitespace/braces] [4] Total errors found: 11 in 8 files If any of these errors are false positives, please file a bug against check-webkit-style.
Alex Christensen
Comment 8 2016-10-13 08:29:04 PDT
Copying something we want to get rid of seems like a bad idea.
Anders Carlsson
Comment 9 2016-10-13 12:28:09 PDT
WebKit Commit Bot
Comment 10 2016-10-13 12:31:23 PDT
Attachment 291505 [details] did not pass style-queue: ERROR: Source/WebKit/win/BackForwardList.cpp:27: Found other header before WebCore config.h. Should be: config.h, primary header, blank line, and then alphabetically sorted. [build/include_order] [4] ERROR: Source/WebKit/win/BackForwardList.cpp:28: Found header this file implements after other header. Should be: config.h, primary header, blank line, and then alphabetically sorted. [build/include_order] [4] ERROR: Source/WebKit/win/BackForwardList.cpp:92: One line control clauses should not use braces. [whitespace/braces] [4] ERROR: Source/WebKit/win/BackForwardList.cpp:100: One line control clauses should not use braces. [whitespace/braces] [4] ERROR: Source/WebKit/win/BackForwardList.cpp:105: Multi line control clauses should use braces. [whitespace/braces] [4] ERROR: Source/WebKit/win/BackForwardList.cpp:108: Omit int when using unsigned [runtime/unsigned] [1] ERROR: Source/WebKit/win/BackForwardList.cpp:109: Multi line control clauses should use braces. [whitespace/braces] [4] ERROR: Source/WebKit/win/BackForwardList.cpp:114: One line control clauses should not use braces. [whitespace/braces] [4] ERROR: Source/WebKit/win/BackForwardList.cpp:152: Multi line control clauses should use braces. [whitespace/braces] [4] ERROR: Source/WebKit/win/BackForwardList.cpp:181: One line control clauses should not use braces. [whitespace/braces] [4] ERROR: Source/WebKit/win/BackForwardList.cpp:216: Multi line control clauses should use braces. [whitespace/braces] [4] Total errors found: 11 in 8 files If any of these errors are false positives, please file a bug against check-webkit-style.
Anders Carlsson
Comment 11 2016-10-13 12:48:32 PDT
(In reply to comment #8) > Copying something we want to get rid of seems like a bad idea. The Mac and Windows implementations of these classes are going to diverge in the near future, and a lot of code is going to be removed from both.
Alex Christensen
Comment 12 2016-10-13 12:56:15 PDT
Comment on attachment 291505 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=291505&action=review > Source/WebKit/win/BackForwardList.cpp:227 > +#if PLATFORM(IOS) This isn't needed any more
Anders Carlsson
Comment 13 2016-10-13 14:38:45 PDT
Note You need to log in before you can comment on or make changes to this bug.