Copy BackForwardList from WebCore to WebKit/win https://bugs.webkit.org/show_bug.cgi?id=163360

Reviewed by Alex Christensen.

Source/WebKit:

This is the first step towards getting rid of BackForwardList in WebCore.

* PlatformWin.cmake:
Add new files.

Source/WebKit/win:

Use our local BackForwardList class instead of WebCore::BackForwardList.

* BackForwardList.cpp: Added.
* BackForwardList.h: Added.
* WebBackForwardList.h:
* WebView.cpp:
(WebView::initWithFrame):
(WebView::backForwardList):

Canonical link: https://commits.webkit.org/181229@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@207308 268f45cc-cd09-0410-ab3c-d52691b4dbfc